bloodc/src/parser/snapshots/bloodc__parser__tests__import_with_colons_separator.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Group {
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 9,
                            end: 20,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                ],
                span: Span {
                    start: 4,
                    end: 20,
                    start_line: 1,
                    start_col: 5,
                },
            },
            items: [
                ImportItem {
                    name: Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 23,
                            end: 30,
                            start_line: 1,
                            start_col: 24,
                        },
                    },
                    alias: None,
                },
                ImportItem {
                    name: Spanned {
                        node: SymbolU32 {
                            value: 4,
                        },
                        span: Span {
                            start: 32,
                            end: 39,
                            start_line: 1,
                            start_col: 33,
                        },
                    },
                    alias: None,
                },
            ],
            span: Span {
                start: 0,
                end: 41,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 41,
        start_line: 1,
        start_col: 1,
    },
}
