bloodc/src/parser/snapshots/bloodc__parser__tests__lifetime_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected type parameter name, found lifetime", span: Span { start: 5, end: 7, start_line: 1, start_col: 6 }, labels: [], suggestions: [] }]
