bloodc/src/parser/snapshots/bloodc__parser__tests__macro_call_error.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0116"), message: "`println!` is a macro call, but macros are not yet implemented", span: Span { start: 16, end: 17, start_line: 1, start_col: 17 }, labels: [], suggestions: [] }]
