bloodc/src/parser/snapshots/bloodc__parser__tests__macro_call_vec.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0116"), message: "`vec!` is a macro call, but macros are not yet implemented", span: Span { start: 20, end: 21, start_line: 1, start_col: 21 }, labels: [], suggestions: [] }]
