bloodc/src/parser/snapshots/bloodc__parser__tests__pub_struct.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: Public,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 12,
                        end: 24,
                        start_line: 2,
                        start_col: 12,
                    },
                },
                type_params: None,
                body: Record(
                    [
                        StructField {
                            vis: Public,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 35,
                                    end: 39,
                                    start_line: 3,
                                    start_col: 9,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 41,
                                                        end: 47,
                                                        start_line: 3,
                                                        start_col: 15,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 41,
                                            end: 47,
                                            start_line: 3,
                                            start_col: 15,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 41,
                                    end: 47,
                                    start_line: 3,
                                    start_col: 15,
                                },
                            },
                            span: Span {
                                start: 31,
                                end: 47,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                        StructField {
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 4,
                                },
                                span: Span {
                                    start: 53,
                                    end: 56,
                                    start_line: 4,
                                    start_col: 5,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 5,
                                                    },
                                                    span: Span {
                                                        start: 58,
                                                        end: 61,
                                                        start_line: 4,
                                                        start_col: 10,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 58,
                                            end: 61,
                                            start_line: 4,
                                            start_col: 10,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 58,
                                    end: 61,
                                    start_line: 4,
                                    start_col: 10,
                                },
                            },
                            span: Span {
                                start: 53,
                                end: 61,
                                start_line: 4,
                                start_col: 5,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 5,
                    end: 64,
                    start_line: 2,
                    start_col: 5,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 64,
        start_line: 2,
        start_col: 1,
    },
}
